@@ -1,0 +1,38 @@
+name: mergedirs_test
+
+on:
+  - push
+  - pull_request
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        python-version:
+          - "3.6"
+          - "3.7"
+          - "3.8"
+          - "3.9"
+          - "3.10"
+          - "3.11"
+
+    steps:
+    - uses: actions/checkout@v2
+    - uses: conda-incubator/setup-miniconda@v2
+      with:
+        activate-environment: test
+        python-version: ${{ matrix.python-version }}
+        auto-activate-base: false
+    - name: Install mergedirs
+      shell: bash -l {0}
+      run : |
+        pip install .
+        pip install pytest
+    - name: Generate data and test with pytest
+      shell: bash -l {0}
+      run: |
+        cd mergedirs/tests/ && ./gendata.sh && cd ../../
+        python -m pytest mergedirs/tests/
+
