@@ -1,7 +1,0 @@
-language: python
-python:
-    - "3.5"
-    - "3.6"
-install:
-    - cd mergedirs/tests && ./gendata.sh && cd ../..
-script: nosetests
